--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,6 +1,5 @@
-import styled from "styled-components";
-
-export const Button = styled.button`
+/* Button.css */
+.button {
   padding: 16px 20px;
   outline: none;
   border: none;
@@ -12,4 +11,4 @@ export const Button = styled.button`
   font-weight: 600;
   font-size: 16px;
   max-width: 350px;
-`;
+}
