--- a/src/pages/Signin/styles.css
+++ b/src/pages/Signin/styles.css
@@ -1,49 +1,49 @@
-import styled from "styled-components";
+/* styles.css */
 
-export const Container = styled.div`
+.container {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 10px;
   height: 100vh;
-`;
+}
 
-export const Content = styled.div`
+.content {
   gap: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  box-shadow: 0 1px 2px #0003;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); /* Usar rgba para a cor com transparência */
   background-color: white;
   max-width: 350px;
   padding: 20px;
   border-radius: 5px;
-`;
+}
 
-export const Label = styled.label`
+.label {
   font-size: 18px;
   font-weight: 600;
   color: #676767;
-`;
+}
 
-export const LabelSignup = styled.label`
+.labelSignup {
   font-size: 16px;
   color: #676767;
-`;
+}
 
-export const labelError = styled.label`
+.labelError {
   font-size: 14px;
   color: red;
-`;
+}
 
-export const Strong = styled.strong`
+.strong {
   cursor: pointer;
+}
 
-  a {
-    text-decoration: none;
-    color: #676767;
-  }
-`;
+.strong a {
+  text-decoration: none;
+  color: #676767;
+}
